2003-12-01 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* device/lib/hc08/_mullong.c: Removed extra #endif

2003-12-01 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/inst.cc,
	* sim/ucsim/hc08.src/hc08mac.h: fixed some problems with CC flag bits and
	carries from x to h
	* src/hc08/gen.c (aopAdrStr): fixed problem with 16 bit immediate
	* src/hc08/gen.c (XAccRsh): fixed problem with right shift
	* device/include/stdarg.h: fixed varargs for hc08
	* device/lib/Makefile.in,
	* device/lib/hc08/Makefile,
	* device/lib/hc08/_mulint.c,
	* device/lib/hc08/_mullong.c: fixed some endian problems

2003-11-28 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* sdcc/src/mcs51/gen.c (genMultOneByte): help peephole 105
	* sdcc/src/mcs51/peeph.def: added peephole 186.e array access in code space
	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c: P2 not used any more (related to #850747, #785979)

2003-11-27 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCClrange.c (findNextUseSym, rlivePoint): fixed bug #849795
	* src/SDCCast.c (astErrors): fixed bug #846007
	* src/SDCCsymt.c (checkFunction): fixed follow-up bug on bug #846007

2003-11-26 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): disabled a transformation I added in
	revision 1.188 (access to fields of a structure at an absolute address);
	it breaks with bitfields, extern declarations, and gcse analysis.
	* src/SDCCopt.c (isLocalWithoutDef): if ADDRESS_OF applied to a symbol, it
	could be assigned through a pointer, so don't complain.
	* src/SDCCast.c (astErrors),
	* src/SDCCast.h,
	* src/SDCCglue.c (emitRegularMap): fixed bug #847813

2003-11-26 Vangelis Rokas <vrokas@otenet.gr>
	
	* src/pic16/main.c (_pic16_genIVT): fixed interrupt vector table
	* src/pic16/main.c (_pic16_genAssemblerPreamble): re-enabled the
	output of __config directives, since gpasm now supports them
	* src/pic16/main.c (_pic16_finaliseOptions): define MCU